--- a/lwdstyle.css
+++ b/lwdstyle.css
@@ -1,17 +1,20 @@
 ﻿body {
-  margin: 0;
-  padding-top: 2rem;
-  padding-bottom: 3rem;
-  box-sizing: border-box;
-  display: block;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-weight: 400;
-  line-height: 1.5;
-  text-align: center;
-  background-color: silver;
+    margin: 0;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    box-sizing: border-box;
+    display: block;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+    line-height: 1.5;
+    text-align: center;
+    background: rgb(63, 94, 251);
+    background: linear-gradient(312deg, rgba(63, 94, 251, 1) 0%, rgba(252, 70, 107, 1) 100%);
 }
 
-*, ::after, ::before {
+*,
+ ::after,
+ ::before {
     box-sizing: border-box;
 }
 
@@ -26,8 +29,9 @@ div {
     left: 0;
     z-index: 1030;
 }
+
 a {
-    color: #456583;
+    color: #38a5fa;
 }
 
 ul {
@@ -55,16 +59,18 @@ li {
     margin-left: -15px;
 }
 
-h1, h3, h5 {
+h1,
+h3,
+h5 {
     padding: 5px;
     text-align: center;
     font-family: 'SofiaRegular', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     color: #6c1b9a;
 }
 
-.h2, h2 {
-
+.h2,
+h2 {
     font-weight: 400;
     font-size: 2rem;
     line-height: 1.2;
@@ -104,16 +110,6 @@ img {
     border-radius: 4%;
 }
 
-.wreath-pic {
-    width: 400;
-    height: 500;
-}
-
-
-.mr-auto, .mx-auto {
-    margin-right: auto!important;
-}
-
 hr {
     border: 0;
     border-top: 1px solid #6c1b9a;
@@ -124,7 +120,7 @@ hr {
 }
 
 .featurette-image {
-  border-radius: 5%;
+    border-radius: 5%;
 }
 
 form {
@@ -132,9 +128,12 @@ form {
     text-align: left;
 }
 
-.col-sm-10 {
-    padding-left: 25em;
-    padding-right: 25em;
+.form-row {
+    padding: 8px;
+}
+
+#formControl1 {
+    background-color: #94bbe9;
 }
 
 .album {
@@ -144,10 +143,11 @@ form {
 .card {
     margin: 7px;
     padding: 5px;
+    width: 22rem;
+    filter: drop-shadow(10px 10px 4px #94bbe9);
 }
 
 i {
     margin: 15px;
     padding-left: 25px;
 }
-
